[gd_scene load_steps=7 format=3 uid="uid://b01c20p3npvbd"]

[ext_resource type="Script" path="res://Scenes/enemy_area_4.gd" id="1_w384q"]
[ext_resource type="Texture2D" uid="uid://dpav11gj6pvn8" path="res://Enemies/Area4/area4_cut.png" id="2_ffy25"]
[ext_resource type="Resource" uid="uid://d01bo8x3vgdor" path="res://Enemies/Area4/area_4.tres" id="2_khe3w"]
[ext_resource type="PackedScene" uid="uid://bcbxpdp1x1t3r" path="res://Scenes/enemy_stats_ui.tscn" id="4_1ay37"]
[ext_resource type="Texture2D" uid="uid://dqvqtt6ly17b5" path="res://Icons/area4.png" id="4_pk7ug"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ii6cy"]
size = Vector2(249.5, 242.5)

[node name="Area4" type="Node2D"]
script = ExtResource("1_w384q")
enemy_stats = ExtResource("2_khe3w")

[node name="Node2D" type="Node2D" parent="."]

[node name="Area4" type="Area2D" parent="Node2D"]
position = Vector2(-199, -128)
collision_layer = 4

[node name="TextureRect" type="TextureRect" parent="Node2D/Area4"]
offset_right = 410.0
offset_bottom = 350.0
pivot_offset = Vector2(205, 175)
texture = ExtResource("2_ffy25")
expand_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area4"]
position = Vector2(222.75, 158.75)
shape = SubResource("RectangleShape2D_ii6cy")

[node name="Logo" type="TextureRect" parent="Node2D/Area4"]
offset_left = 87.0
offset_top = 172.0
offset_right = 218.0
offset_bottom = 218.0
texture = ExtResource("4_pk7ug")

[node name="EnemyStatsUI" parent="." instance=ExtResource("4_1ay37")]
unique_name_in_owner = true
visible = false
offset_left = -177.0
offset_top = -313.0
offset_right = 45.0
offset_bottom = 50.0

[node name="CardSlot" type="Node2D" parent="."]
position = Vector2(80, -315)

[connection signal="mouse_entered" from="Node2D/Area4" to="." method="_on_area_4_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Area4" to="." method="_on_area_4_mouse_exited"]
